force-app/main/default/objects/VASS_Country__c/VASS_Country__c.object-meta.xml
<CustomObject>
    <description>Represents detailed information about a countries, including international identifiers.</description>
    <label>Country</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>