force-app/main/default/objects/VASS_Country__c/fields/VASS_Acronyms__c.field-meta.xml
<CustomField>
    <fullName>VASS_Acronyms__c</fullName>
    <description>List of acronyms representing the regional blocs or international organizations the country is part of. These typically refer to economic or political alliances (e.g., &quot;EU&quot; for European Union, &quot;AU&quot; for African Union, &quot;NAFTA&quot; for North American Free Trade Agreement).</description>
    <label>Acronyms</label>
    <type>TextArea</type>
</CustomField>