force-app/main/default/objects/VASS_Country__c/fields/VASS_Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>VASS_Alpha2Code__c</fullName>
    <description>Two-letter country code assigned to each country according to the ISO 3166-1 alpha-2 standard. This code is commonly used in international systems and services to identify countries in a compact and standardized way (e.g., &quot;US&quot; for United States, &quot;FR&quot; for France).</description>
    <label>Alpha2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>