force-app/main/default/objects/VASS_Country__c/fields/VASS_Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>VASS_Alpha3Code__c</fullName>
    <description>Three-letter country code assigned according to the ISO 3166-1 alpha-3 standard. This code provides a more recognizable and less ambiguous representation of country names in international systems (e.g., &quot;USA&quot; for United States, &quot;FRA&quot; for France).</description>
    <externalId>true</externalId>
    <label>Alpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>