force-app/main/default/objects/VASS_Country__c/fields/VASS_CapitalCity__c.field-meta.xml
<CustomField>
    <fullName>VASS_CapitalCity__c</fullName>
    <description>Name of the country&apos;s capital city. This is the primary city where the government is typically seated and where major national institutions are located (e.g., &quot;Berlin&quot; for Germany, &quot;Tokyo&quot; for Japan).</description>
    <label>Capital city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>