force-app/main/default/objects/VASS_Country__c/fields/VASS_Region__c.field-meta.xml
<CustomField>
    <fullName>VASS_Region__c</fullName>
    <description>The broad geographic region to which the country belongs, based on common continental or geopolitical classifications. Examples include &quot;Europe&quot;, &quot;Asia&quot;, &quot;Africa&quot;, &quot;Americas&quot;, or &quot;Oceania&quot;.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>